--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
   "version": "1.0.0",
   "description": "application to practice marc file creation",
   "main": "index.js",
+  "repository": "git@github.com:TomSpencerLondon/marc-practice.git",
   "author": "thomas.spencer@codurance.com",
+  "devDependencies": {
+    "tslint": "^6.1.3",
+    "@types/jest": "^26.0.14",
+    "jest": "^26.4.2",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.2"
+  },
+  "scripts": {
+    "test": "jest"
+  },
   "license": "MIT"
 }
