--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@types/jest": "^26.0.14",
     "jest": "^26.4.2",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "@natlibfi/marc-record": "^6.1.1"
   },
   "scripts": {
     "test": "jest"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+  }
 }
