--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "repository": "git@github.com:TomSpencerLondon/marc-practice.git",
   "author": "thomas.spencer@codurance.com",
   "devDependencies": {
-    "tslint": "^6.1.3",
+    "@babel/preset-env": "^7.11.5",
     "@types/jest": "^26.0.14",
+    "babel-jest": "^26.3.0",
     "jest": "^26.4.2",
     "ts-node": "^9.0.0",
+    "tslint": "^6.1.3",
     "typescript": "^4.0.2",
     "@natlibfi/marc-record": "^6.1.1"
   },
