--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "jest": "^26.4.2",
     "ts-node": "^9.0.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.0.2",
-    "@natlibfi/marc-record": "^6.1.1"
+    "typescript": "^4.0.2"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "demo": "ts-node demo.ts"
   },
   "license": "MIT",
   "dependencies": {
+    "@natlibfi/marc-record": "^6.1.1"
   }
 }
