--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   },
   "scripts": {
     "test": "jest",
-    "demo": "ts-node demo.ts"
+    "demo": "ts-node demo.ts",
+    "read": "ts-node read-demo.ts"
   },
   "license": "MIT",
   "dependencies": {
-    "@natlibfi/marc-record": "^6.1.1"
+    "@natlibfi/marc-record": "^6.1.1",
+    "@natlibfi/marc-record-serializers": "^7.1.6"
   }
 }
